[gd_scene load_steps=2 format=3 uid="uid://cbua6gtt2x8wu"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_0753l"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0753l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stellar me quest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="StartNewGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Начать новую игру"

[node name="ConfigureGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Настроить игру"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ContinueGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Продолжить игру"

[node name="CloseGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Закрыть игру"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartNewGame" to="." method="_on_start_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ConfigureGame" to="." method="_on_configure_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CloseGame" to="." method="_on_close_game_pressed"]
